// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render should render correctly 1`] = `
<div>
  <button
    className="button button--theme-grey button--big"
    onClick={[Function]}
    type="button"
  >
    0
  </button>
</div>
`;

exports[`Button render when I am not passing the size prop should render correctly 1`] = `
<div>
  <button
    className="button button--theme-grey"
    onClick={[Function]}
    type="button"
  >
    0
  </button>
</div>
`;
